Remove old files

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "Dad-A-Based",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "A collection of dad jokes for the web.",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
@@ -11,6 +11,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "heroku-postbuild": "gatsby build",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
@@ -23,9 +24,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/BrandonHarrisonCode/Dad-A-Base"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/BrandonHarrisonCode/Dad-A-Base/issues"
   }
 }
